fixed aligning of services icons

--- a/html-css/module-06/homework/css/style.css
+++ b/html-css/module-06/homework/css/style.css
@@ -97,6 +97,7 @@ ul {
   height: 67px;
   flex-shrink: 0;
   background-repeat: no-repeat;
+  background-position-x: center;
 }
 
 .alarm::before {
@@ -131,8 +132,6 @@ ul {
 .service:not(:nth-last-child(-n+3)) {
   margin-bottom: 100px;
 }
-
-/* TODO: fix layout */
 
 .service-content {
   display: flex;
